// Copyright 2025 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package kuscia.proto.api.v1alpha1.diagnose;

import "kuscia/proto/api/v1alpha1/common.proto";

option go_package = "github.com/secretflow/kuscia/proto/api/v1alpha1/diagnose";


message EnvoyLogRequest {
  string task_id = 1;
  string create_time = 2;
  string domain_id = 3;
}

message EnvoyLog {
  string ip =1;
  string timestamp = 2;
  string node_name = 3;
  string service_name = 4;
  string interface_addr = 5;
  string http_method = 6;
  string trace_id = 7;
  string status_code = 8;
  string content_length = 9;
  string request_time = 10;
}

message EnvoyLogInfo {
  repeated EnvoyLog envoy_log_list = 1;
  string type = 2;
}

message EnvoyLogInfoResponse {
  Status status = 1;
  repeated EnvoyLogInfo envoy_info_list = 2;
  string domain_id = 3;
}
